force-app/main/default/objects/SVMXA360__CONF_LayoutSection__c/SVMXA360__CONF_LayoutSection__c.object-meta.xml
<CustomObject>
    <description>Stores the section info.</description>
    <label>Layout Section</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Layout Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>