force-app/main/default/objects/SVMXA360__CONF_LayoutSection__c/fields/SVMXA360__EvaluationEvent__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EvaluationEvent__c</fullName>
    <description>Event on which the criteria to be evaluated for dynamic sections</description>
    <label>Evaluation Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Load</fullName>
            </value>
            <value>
                <fullName>Always</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>