force-app/main/default/objects/SVMXA360__CONF_LayoutSection__c/fields/SVMXA360__Layout__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Layout__c</fullName>
    <description>Master detail lookup to Layout.</description>
    <label>Layout</label>
    <referenceTo>SVMXA360__CONF_Layout__c</referenceTo>
    <relationshipLabel>Layout Sections</relationshipLabel>
    <relationshipName>LayoutSections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>