force-app/main/default/objects/SVMXA360__CONF_LayoutSection__c/fields/SVMXA360__NoOfColumn__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__NoOfColumn__c</fullName>
    <description>Number of columns in a section.</description>
    <label>Number Of Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>