force-app/main/default/objects/SVMXA360__CONF_LayoutSection__c/fields/SVMXA360__ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, all fields in the section are made read only.</description>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>