force-app/main/default/objects/SVMXA360__CONF_LayoutSection__c/fields/SVMXA360__SectionSequence__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SectionSequence__c</fullName>
    <description>Order in which the section is displayed.</description>
    <label>Section Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>