force-app/main/default/objects/SVMXA360__CONF_LayoutSection__c/fields/SVMXA360__VisibilityCriteriaID__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__VisibilityCriteriaID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Criteria based on which section to be displayed</description>
    <label>Visibility Criteria</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Layout Sections (Visibility Criteria)</relationshipLabel>
    <relationshipName>LayoutSections</relationshipName>
    <type>Lookup</type>
</CustomField>